--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <h1>
-            <img src="https://drive.google.com/uc?id=1MFDqQgJpi6Pswd783PeRotGd8PZVPhR0" alt="Atmee" style="width: 200px; height: auto">
+            <img src="https://drive.google.com/uc?id=1MFDqQgJpi6Pswd783PeRotGd8PZVPhR0" alt="Atmee" style="width: 250px; height: auto">
         </h1>
         <div class="navbar">
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSePd9seWfR6Vx_JFqx1wVIgaQkuPEDVB9JHAy8jcS2jZAO7Eg/viewform" class="button">Order Now</a>
@@ -277,13 +277,85 @@
  
     <div class="product">
       <div class="container">
-        <img src="https://drive.google.com/uc?id=" alt="Puzzles" />
+        <img src="https://drive.google.com/uc?id=1PJnQpe7fpdyjTvXnYpysHJYA0FrP7xwK" alt=" 3D warli art" />
       </div>
-      <h3>Puzzles Pendant</h3>
-      <p>Book your customized one now!</p>
+      <h3> 3D warli art</h3>
+      <p>Paper mache art available in any form, style, texture, patterns and shapes in literally any way you want it. Book your customized one now!</p>
       <br />
       <p class="price">Price: $29.99</p>
     </div>
+    <div class="product">
+        <div class="container">
+          <img src="https://drive.google.com/uc?id=1uet1G7dskxwHjAiSWU2A107Hvg7OIBiv" alt="Vibrant murals" />
+        </div>
+        <h3>Vibrant murals</h3>
+        <p>Vibrant murals that give a sense of completeness on whichever wall you put it on!
+            Available with customization!Book your customized one now!</p>
+        <br />
+        <p class="price">Price: $29.99</p>
+      </div>
+      <div class="product">
+        <div class="container">
+          <img src="https://drive.google.com/uc?id=165eO6mdTo14AUin1IfCPR_VTcQzFPpxm" alt="Siporex Stone Carving" />
+        </div>
+        <h3>Siporex Stone Carving</h3>
+        <p>Aesthetically Satisfying Siporex Stone Carving wall hanging is now available!Book your customized one now!</p>
+        <br />
+        <p class="price">Price: $29.99</p>
+      </div>
+      <div class="product">
+        <div class="container">
+          <img src="https://drive.google.com/uc?id=1KpUJq5XEaoocXXw749G3ot003JgyhqFC" alt="Blue Star Style Mandala" />
+        </div>
+        <h3>Blue Star Style Mandala</h3>
+        <p>Sparkling Blue Star Style Mandala which breaks the conventional style for bringing uniqueness in home decor using mandalas!
+
+            Mandalas are custom-made in your choice of colors, sizes, shapes, and patterns.Book your customized one now!</p>
+        <br />
+        <p class="price">Price: $29.99</p>
+      </div>
+      <div class="product">
+        <div class="container">
+          <img src="https://drive.google.com/uc?id=15l90cpah_yJHV957BghwLX16k4szF28y" alt="Owl Pen Stand" />
+        </div>
+        <h3>Owl Pen Stand</h3>
+        <p>The cute Owl Pen Stand made up of resin is now Available!
+            Can be custom-made with your choice of colors, textures, and patterns.
+            Book your customized one now!</p>
+        <br />
+        <p class="price">Price: $29.99</p>
+      </div>
+      <div class="product">
+        <div class="container">
+          <img src="https://drive.google.com/uc?id=1ARt3n2tR-_d8ApWL6KmMdKGK274awJz8" alt="Nameplates " />
+        </div>
+        <h3>Nameplates</h3>
+        <p>Unique style Nameplates based on your home's philosophy, totally personalized and to suit your taste.
+
+            Available in your choice of colors, language, style, size and shapes.Book your customized one now!</p>
+        <br />
+        <p class="price">Price: $29.99</p>
+      </div>
+      <div class="product">
+        <div class="container">
+          <img src="https://drive.google.com/uc?id=1E5oYKOMoTTAIRCA6V0uSKVAfLPyIlmmB" alt="signages" />
+        </div>
+        <h3>Signages</h3>
+        <p>
+            Custom-made and personalized signages for homes, offices, schools, colleges, and any other public places for lifting up the place with aesthetics.Book your customized one now!</p>
+        <br />
+        <p class="price">Price: $29.99</p>
+      </div>
+
+      <div class="product">
+        <div class="container">
+          <img src="https://drive.google.com/uc?id=" alt="Puzzles" />
+        </div>
+        <h3>Pendant</h3>
+        <p>Book your customized one now!</p>
+        <br />
+        <p class="price">Price: $29.99</p>
+      </div>
 
 
 </body>
