--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
   </div>
   <div class="product">
     <div class="container">
-      <img src="https://drive.google.com/uc?id=1mzvhboSJiFmGv9-pTsDEU056x2TpGuhq" alt="Product 1"/></div>
+      <img src="https://drive.google.com/uc?id=1mzvhboSJiFmGv9-pTsDEU056x2TpGuhq" alt="Hand Posture"/></div>
     <h3>Hand Bowl</h3>
     <p>Crystal Like Hand Posture Bowl for placing decorative items, keys, and
       pebbles is available in any color. Also available in floral texture and
@@ -319,6 +319,158 @@
           </div>
           <div class="product">
             <div class="container">
+              <img src="https://drive.google.com/uc?id=1sHP2bFOUi0kSvxwzOQQ88o2kfLnEk7j6" alt="Puzzles" /></div>
+            <h3>Pendant</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1s9_-P-P7EvUDycVOr4L0TvxI3uLCHIxt" alt="Puzzles" /></div>
+            <h3>Pendant</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1jNofib25rfdpWmvNXRdwBwZa8S9i58dh" alt="Puzzles" /></div>
+            <h3>Pendant</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1amR6w3QIAW7t5SMEGvFX24NtdWBCijPw" alt="Puzzles" /></div>
+            <h3>Pendant</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1CqMrXiSSK-dpe499g2HSS4ST_FqmR7J8" alt="Puzzles" /></div>
+            <h3>Pendant</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1RL9hPoPsf3t31180RUGR5bCjMJDTXuup" alt="Puzzles" /></div>
+            <h3>Pendant</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1EkzL2_AEqnj6KQpKYvsceL5L9FHRmMUx" alt="Puzzles" /></div>
+            <h3>Pendant</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1lZ8f1qtH_vBVCUg4hxojvylzJcxs-lvc" alt="Puzzles" /></div>
+            <h3>Pendant</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1-w5eozSDt0aj-gob4j1dGBdfnO1syFmx" alt="Puzzles" /></div>
+            <h3>Pendant</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1-XXcHtnPoznB_Tj7Op_ufICsnRAjDIRR" alt="Puzzles" /></div>
+            <h3>Pendant</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1kjOtxkzD-SVXX6vkSwkMY0WES437maN7" alt="Puzzles" /></div>
+            <h3>Pendant</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1NjrMsDJqdWYiMe6wcJs2qGq396OLqFSB" alt="Puzzles" /></div>
+            <h3>Pendant</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1kc4CcOPxEwNIsvQZZe4AqEsLb0WxBG2b" alt="Puzzles" /></div>
+            <h3>Pendant</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1rUq9vsNoRNFkX9sxyrHNonTgZUrUr5Az" alt="Puzzles" /></div>
+            <h3>Pendant</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1PeKqBJY_EtbvTkc7u0nBU5h2PBUPNjna" alt="Puzzles" /></div>
+            <h3>Pendant</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1n2pxRo37CDX_naN3kB9JUeNfJyNZRDIS" alt="Puzzles" /></div>
+            <h3>Pendant</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1uDBwxeWvXpgbxHz-5XDjMm97VZAFMm2k" alt="Puzzles" /></div>
+            <h3>Pendant</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=12K7Q7OTG3_Vl1qcmlftMH6ZrSK3iH2vi" alt="Puzzles" /></div>
+            <h3>Pendant</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1dqWmbitiHEQa-2QCJ4cmSUSiL8jsnORC" alt="Puzzles" /></div>
+            <h3>Pendant</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
               <img src="https://drive.google.com/uc?id=1eSZ3pN1mN_dCZ-JcbU97WyZix86kW3PX" alt="Circular earrings" />
             </div>
             <h3>Circular earrings with floral Design!</h3>
@@ -334,6 +486,190 @@
             <p>Cubical Earrings with floral Design! Book your customized one now!</p>
             <br />
             <p class="price">Price: ₹ 200</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=13W3Fx62_nPc56NtJPBzUg5p3IZmBQ8p7" alt="Tops with florals" /></div>
+            <h3>Tops with florals</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1NpoeFBLUsF6Accz9TYqUHS-4eavwaRNU" alt="Tops dual colors" /></div>
+            <h3>Tops dual colors</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1n54m28kGghfZHpoIL38uORry02dKQhVZ" alt="Tops with golden florals" /></div>
+            <h3>Tops with golden florals design</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1Ohl7Z0MuCLPzCkJXTyprlZPpKcrZn9Xt" alt="Tops with florals" /></div>
+            <h3>Tops with florals</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1Hhj9s4cHoTZ1qxkwL3BBHh-JLP8iiHxO" alt="Tops with florals" /></div>
+            <h3>Tops with florals</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1KDJvNgJGjYGYyBk5OMZTHqnGv5RP6y6H" alt="Tops with glitter" /></div>
+            <h3>Tops with glitter</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1vmyalCFCgcguWB0mtKh6WVL7w1jWaFTy" alt="Tops with pearl" /></div>
+            <h3>Tops with pearl</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1RiOhKAKG-V2O8c_zJAE4dPVlnXReal5k" alt="Tops with pearls" /></div>
+            <h3>Tops with pearls</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1I7XECdxc4MPgz3lsxq42mwY2ZnyupynM" alt="Drop like Tops with pearls" /></div>
+            <h3>Drop like Tops with pearls</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1mbJBbDz2wa-6eogM4neFUELg6T_hiHbd" alt="Drop shaped rings with pearls" /></div>
+            <h3>Drop shaped rings with pearls</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1WGUigL-_5Gy25FKnrXKpyQIherUtSg_i" alt="Hanging rings with pearls" /></div>
+            <h3>Hanging rings with pearls</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1QswaVmC2X9dLSvK6bZODygyqCYZXx2Co" alt="Drop like Tops with leaves" /></div>
+            <h3>Drop like Tops with leaves</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1LHTtM6OxqQ8qgsS5tELQWbDfJqQR1aIW" alt="Puzzles" /></div>
+            <h3>Green bead tops</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1Zzwhnx2LeLTx9zP943auBfPMl2-ZnKEi" alt="Unique earrings in white with pearls" /></div>
+            <h3>Unique earrings in white with pearls</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1Aa7uND-k1I338YGNqy4E5UYVaakBbH04" alt="Unique earrings in white with golden pearls" /></div>
+            <h3>Unique earrings in white with golden pearls</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1PVUF-WX0nIckEMwFKbwWJrED0sOK3Hnm" alt="Rings with florals" /></div>
+            <h3>Rings with florals</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=13kiOPEOL40BMB8OpmR4cc8x23pnJxV91" alt="Rings with florals" /></div>
+            <h3>Rings with rose petals</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=17LxBCHIJPiN-AbgiE3TzSySDuXjzDwIO" alt="Hanging earrings with florals and golden flakes" /></div>
+            <h3>Hanging earrings with florals and golden flakes</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1XaPBDB9qsUmsUd7yYtMDWmVX5tTUPZoD" alt="Rings with stones in different colors" /></div>
+            <h3>Rings with multicolour stones</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1S3jNZhHFROkMXYJDbjExoV7AysO9aJ8t" alt="Unique earrings with stones" /></div>
+            <h3>Unique earrings with multicolour stones</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1I9eJjnzFHwT7Kbaicyz4YV_aGuUmvPeb" alt="Circular Earrings with golden flair in dual color" /></div>
+            <h3>Circular Earrings with golden flair in dual color</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1goAO9QAn0cpMvZNsl48yDkv4lGev2dax" alt="Earrings in dual color" /></div>
+            <h3>Earrings in dual color</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1pJ4GiXdv6j-2b_YUB0X1_ktzP3xpp3xk" alt="Hanging rings in dual color" /></div>
+            <h3>Hanging rings in dual color</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
           </div>
 </div> 
 
