--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
           <div class="product">
             <div class="container">
               <img src="https://drive.google.com/uc?id=1sHP2bFOUi0kSvxwzOQQ88o2kfLnEk7j6" alt="Puzzles" /></div>
-            <h3>Pendant</h3>
+            <h3>Green leaves</h3>
             <p>Book your customized one now!</p>
             <br />
             <p class="price">Price: ₹29.99</p>
@@ -328,7 +328,7 @@
           <div class="product">
             <div class="container">
               <img src="https://drive.google.com/uc?id=1s9_-P-P7EvUDycVOr4L0TvxI3uLCHIxt" alt="Puzzles" /></div>
-            <h3>Pendant</h3>
+            <h3>Blue transparent Pendant</h3>
             <p>Book your customized one now!</p>
             <br />
             <p class="price">Price: ₹29.99</p>
@@ -336,7 +336,7 @@
           <div class="product">
             <div class="container">
               <img src="https://drive.google.com/uc?id=1jNofib25rfdpWmvNXRdwBwZa8S9i58dh" alt="Puzzles" /></div>
-            <h3>Pendant</h3>
+            <h3>Golden with glitter pendant</h3>
             <p>Book your customized one now!</p>
             <br />
             <p class="price">Price: ₹29.99</p>
@@ -344,6 +344,22 @@
           <div class="product">
             <div class="container">
               <img src="https://drive.google.com/uc?id=1amR6w3QIAW7t5SMEGvFX24NtdWBCijPw" alt="Puzzles" /></div>
+            <h3>Gold beads Pendant</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1DG8FovsNcEx3qWdKLRP7EInkNFDFZhmk" alt="Puzzles" /></div>
+            <h3>Dual colour square shaped Pendant</h3>
+            <p>Book your customized one now!</p>
+            <br />
+            <p class="price">Price: ₹29.99</p>
+          </div>
+          <div class="product">
+            <div class="container">
+              <img src="https://drive.google.com/uc?id=1t9lCpZWyIfG2Ol4IJlgJvGIjDvHpaNFT" alt="Puzzles" /></div>
             <h3>Pendant</h3>
             <p>Book your customized one now!</p>
             <br />
@@ -351,24 +367,8 @@
           </div>
           <div class="product">
             <div class="container">
-              <img src="https://drive.google.com/uc?id=1CqMrXiSSK-dpe499g2HSS4ST_FqmR7J8" alt="Puzzles" /></div>
-            <h3>Pendant</h3>
-            <p>Book your customized one now!</p>
-            <br />
-            <p class="price">Price: ₹29.99</p>
-          </div>
-          <div class="product">
-            <div class="container">
-              <img src="https://drive.google.com/uc?id=1RL9hPoPsf3t31180RUGR5bCjMJDTXuup" alt="Puzzles" /></div>
-            <h3>Pendant</h3>
-            <p>Book your customized one now!</p>
-            <br />
-            <p class="price">Price: ₹29.99</p>
-          </div>
-          <div class="product">
-            <div class="container">
-              <img src="https://drive.google.com/uc?id=1EkzL2_AEqnj6KQpKYvsceL5L9FHRmMUx" alt="Puzzles" /></div>
-            <h3>Pendant</h3>
+              <img src="https://drive.google.com/uc?id=1jWwquINP0XxYHEejNNfIUJE2xemHoplN" alt="Puzzles" /></div>
+            <h3>Drop shaped yellow Pendant</h3>
             <p>Book your customized one now!</p>
             <br />
             <p class="price">Price: ₹29.99</p>
@@ -384,7 +384,7 @@
           <div class="product">
             <div class="container">
               <img src="https://drive.google.com/uc?id=1-w5eozSDt0aj-gob4j1dGBdfnO1syFmx" alt="Puzzles" /></div>
-            <h3>Pendant</h3>
+            <h3>Circular Pendant with rose petals</h3>
             <p>Book your customized one now!</p>
             <br />
             <p class="price">Price: ₹29.99</p>
@@ -392,7 +392,7 @@
           <div class="product">
             <div class="container">
               <img src="https://drive.google.com/uc?id=1-XXcHtnPoznB_Tj7Op_ufICsnRAjDIRR" alt="Puzzles" /></div>
-            <h3>Pendant</h3>
+            <h3>Rectangular dual colour Pendant</h3>
             <p>Book your customized one now!</p>
             <br />
             <p class="price">Price: ₹29.99</p>
@@ -400,7 +400,7 @@
           <div class="product">
             <div class="container">
               <img src="https://drive.google.com/uc?id=1kjOtxkzD-SVXX6vkSwkMY0WES437maN7" alt="Puzzles" /></div>
-            <h3>Pendant</h3>
+            <h3>Dual color Pendant</h3>
             <p>Book your customized one now!</p>
             <br />
             <p class="price">Price: ₹29.99</p>
@@ -424,7 +424,7 @@
           <div class="product">
             <div class="container">
               <img src="https://drive.google.com/uc?id=1rUq9vsNoRNFkX9sxyrHNonTgZUrUr5Az" alt="Puzzles" /></div>
-            <h3>Pendant</h3>
+            <h3>Leaf Pendant</h3>
             <p>Book your customized one now!</p>
             <br />
             <p class="price">Price: ₹29.99</p>
@@ -440,7 +440,7 @@
           <div class="product">
             <div class="container">
               <img src="https://drive.google.com/uc?id=1n2pxRo37CDX_naN3kB9JUeNfJyNZRDIS" alt="Puzzles" /></div>
-            <h3>Pendant</h3>
+            <h3>Pendant with while stones</h3>
             <p>Book your customized one now!</p>
             <br />
             <p class="price">Price: ₹29.99</p>
@@ -448,15 +448,15 @@
           <div class="product">
             <div class="container">
               <img src="https://drive.google.com/uc?id=1uDBwxeWvXpgbxHz-5XDjMm97VZAFMm2k" alt="Puzzles" /></div>
-            <h3>Pendant</h3>
+            <h3>Pendant with multicoloured stones</h3>
             <p>Book your customized one now!</p>
             <br />
             <p class="price">Price: ₹29.99</p>
           </div>
           <div class="product">
             <div class="container">
-              <img src="https://drive.google.com/uc?id=12K7Q7OTG3_Vl1qcmlftMH6ZrSK3iH2vi" alt="Puzzles" /></div>
-            <h3>Pendant</h3>
+              <img src="https://drive.google.com/uc?id=1NNUTWKokwc-FS7zjm9k9R6eD3gvp7k3S" alt="Puzzles" /></div>
+            <h3>Pink flowers and glitter Pendant</h3>
             <p>Book your customized one now!</p>
             <br />
             <p class="price">Price: ₹29.99</p>
@@ -464,7 +464,7 @@
           <div class="product">
             <div class="container">
               <img src="https://drive.google.com/uc?id=1dqWmbitiHEQa-2QCJ4cmSUSiL8jsnORC" alt="Puzzles" /></div>
-            <h3>Pendant</h3>
+            <h3>Pendant with perls</h3>
             <p>Book your customized one now!</p>
             <br />
             <p class="price">Price: ₹29.99</p>
